# django-candidate-batch-process

./: .env.bak  .env.example  .gitignore  DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml  traefik.yml
Dockerfiles/: Dockerfile  Dockerfile.dockerignore
api/: exceptions.py  permissions.py  urls.py
api/auth/: serializers.py  urls.py  views.py
api/batch_runs/: serializers.py  urls.py  views.py
api/candidates/: serializers.py  urls.py  views.py
api/health/: urls.py  views.py
api/reports/: serializers.py  urls.py  views.py
apps/batch_runs/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
apps/batch_runs/migrations/: 0001_initial.py  0002_batchrun_status.py  0003_batchrun_total_processed.py
apps/candidates/: admin.py  forms.py  models.py  urls.py  views.py
apps/candidates/migrations/: 0001_initial.py  0002_candidate_deleted_at_candidate_is_deleted_and_more.py
apps/core/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/core/management/commands/: seed.py
apps/core/migrations/: 0001_initial.py
apps/dashboard/: apps.py  urls.py  views.py
apps/reports/: views.py
certs/: local.crt  local.key
config/: settings.py  urls.py
static/css/: main.css
templates/: base.html
templates/batch_runs/: attempts.html  detail.html  list.html
templates/candidates/: create.html  detail.html  edit.html
templates/dashboard/: index.html
templates/reports/: dashboard.html
templates/users/: login.html  signup.html
