[project]
name = "msigma-django-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "fastapi>=0.135.1",
    "pydantic[email]>=2.12.5",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
